# homework-python

./: .gitignore  Makefile  README.md  pyproject.toml
002_bmi_calculator/: README.md
002_how_much_time/: README.md
002_weight_converter/: README.md
003_sausage_calculator/: README.md
005_bmi_calculator_2/: README.md
006_pizza_order/: README.md
006_rock_paper_scissors/: README.md
007_party_inviter/: README.md
008_health_potion/: README.md
010_ghost_game/: README.md
011_bookshop_bonuses/: main.py
012_caesar_cipher/: README.md
11_primer_or_prime/: main.py
homework_python/step1/band_name_generator/: README.md
homework_python/step1/next_year_age/: README.md
homework_python/step_0/: README.md
homework_python/step_1/: README.md
homework_python/step_2/: README.md
homework_python/templates/: README.md  template_step.md
step_0/: README.md
step_10/hangman_game/: README.md
step_10/password_generator/: README.md
step_11/bookshop_bonuses/: README.md
step_11/primer_or_prime/: README.md
step_14/bitcoin_amount/: README.md  main.py
step_15/higher_lower_game/: README.md
step_2/: README.md
step_2/area_calc/: README.md
step_2/how_much_time/: main.py
step_3/sausage_calculator/: README.md
step_4/odd_or_even/: README.md
step_6/pizza_order/: main.py
step_6/quest_game/: README.md
step_6/rollercoaster/: README.md
step_6/wifi_diagnostics/: README.md
step_7/exam_score/: README.md
step_8/party_inviter/: main.py
step_9/fizzbuzz/: README.md
step_9/friends_inviter/: README.md
templates/: template_hw.md
(+15 files in other folders)
