[tool.poetry]
name = "homework-python"
version = "0.1.0"
description = ""
repository = "https://github.com/teacher_ilya/homework-python"
authors = ["Ilia Kaziamov <ilya.kazyamov@gmail.com>", 'Ilya Kazyamov <teacher.ilya.255@gmail.com>']
readme = "README.md"
packages = [{include = "homework_python"}]
classifiers = [
	"Programming Language :: Python",
	"Intended Audience :: Education",
	"Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
Tree = "^0.2.4"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
